#Seoul Geo Success

--- a/taxi/Taxi Scratch.ipynb
+++ b/taxi/Taxi Scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,65 +38,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'CNT_EMP': 0.0,\n",
-       "  'CNT_OFF': 0.0,\n",
-       "  'CNT_ON': 1.0,\n",
+       "[{'LINK_ID': 'T_156511',\n",
+       "  'X_PART': '127.0862890^127.0861067^127.0860469^127.0860522^',\n",
+       "  'Y_PART': '37.5731926^37.5729649^37.5726380^37.5720175^',\n",
        "  'DAY': '1',\n",
+       "  'TIME': '25',\n",
+       "  'WEATHER': '1',\n",
        "  'DEST': '1120',\n",
-       "  'LINK_ID': 'T_156511',\n",
+       "  'CNT_ON': 1.0,\n",
+       "  'CNT_OFF': 0.0,\n",
+       "  'CNT_EMP': 0.0},\n",
+       " {'LINK_ID': 'T_156511',\n",
+       "  'X_PART': '127.0862890^127.0861067^127.0860469^127.0860522^',\n",
+       "  'Y_PART': '37.5731926^37.5729649^37.5726380^37.5720175^',\n",
+       "  'DAY': '1',\n",
        "  'TIME': '25',\n",
        "  'WEATHER': '1',\n",
-       "  'X_PART': '127.0862890^127.0861067^127.0860469^127.0860522^',\n",
-       "  'Y_PART': '37.5731926^37.5729649^37.5726380^37.5720175^'},\n",
-       " {'CNT_EMP': 0.0,\n",
-       "  'CNT_OFF': 0.0,\n",
-       "  'CNT_ON': 8.0,\n",
-       "  'DAY': '1',\n",
        "  'DEST': '1121',\n",
-       "  'LINK_ID': 'T_156511',\n",
+       "  'CNT_ON': 8.0,\n",
+       "  'CNT_OFF': 0.0,\n",
+       "  'CNT_EMP': 0.0},\n",
+       " {'LINK_ID': 'T_156511',\n",
+       "  'X_PART': '127.0862890^127.0861067^127.0860469^127.0860522^',\n",
+       "  'Y_PART': '37.5731926^37.5729649^37.5726380^37.5720175^',\n",
+       "  'DAY': '1',\n",
        "  'TIME': '25',\n",
        "  'WEATHER': '1',\n",
-       "  'X_PART': '127.0862890^127.0861067^127.0860469^127.0860522^',\n",
-       "  'Y_PART': '37.5731926^37.5729649^37.5726380^37.5720175^'},\n",
-       " {'CNT_EMP': 0.0,\n",
-       "  'CNT_OFF': 0.0,\n",
-       "  'CNT_ON': 1.0,\n",
-       "  'DAY': '1',\n",
        "  'DEST': '1171',\n",
-       "  'LINK_ID': 'T_156511',\n",
-       "  'TIME': '25',\n",
-       "  'WEATHER': '1',\n",
-       "  'X_PART': '127.0862890^127.0861067^127.0860469^127.0860522^',\n",
-       "  'Y_PART': '37.5731926^37.5729649^37.5726380^37.5720175^'},\n",
-       " {'CNT_EMP': 602.0,\n",
-       "  'CNT_OFF': 2.0,\n",
-       "  'CNT_ON': 0.0,\n",
-       "  'DAY': '1',\n",
-       "  'DEST': '',\n",
-       "  'LINK_ID': 'T_156511',\n",
-       "  'TIME': '25',\n",
-       "  'WEATHER': '1',\n",
-       "  'X_PART': '127.0862890^127.0861067^127.0860469^127.0860522^',\n",
-       "  'Y_PART': '37.5731926^37.5729649^37.5726380^37.5720175^'},\n",
-       " {'CNT_EMP': 0.0,\n",
-       "  'CNT_OFF': 0.0,\n",
        "  'CNT_ON': 1.0,\n",
+       "  'CNT_OFF': 0.0,\n",
+       "  'CNT_EMP': 0.0},\n",
+       " {'LINK_ID': 'T_156511',\n",
+       "  'X_PART': '127.0862890^127.0861067^127.0860469^127.0860522^',\n",
+       "  'Y_PART': '37.5731926^37.5729649^37.5726380^37.5720175^',\n",
        "  'DAY': '1',\n",
-       "  'DEST': '1111',\n",
-       "  'LINK_ID': 'T_156516',\n",
        "  'TIME': '25',\n",
        "  'WEATHER': '1',\n",
+       "  'DEST': '',\n",
+       "  'CNT_ON': 0.0,\n",
+       "  'CNT_OFF': 2.0,\n",
+       "  'CNT_EMP': 602.0},\n",
+       " {'LINK_ID': 'T_156516',\n",
        "  'X_PART': '127.0845311^127.0838387^',\n",
-       "  'Y_PART': '37.5737553^37.5725477^'}]"
+       "  'Y_PART': '37.5737553^37.5725477^',\n",
+       "  'DAY': '1',\n",
+       "  'TIME': '25',\n",
+       "  'WEATHER': '1',\n",
+       "  'DEST': '1111',\n",
+       "  'CNT_ON': 1.0,\n",
+       "  'CNT_OFF': 0.0,\n",
+       "  'CNT_EMP': 0.0}]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,9 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'x': '127.0862890', 'y': '37.5731926'}, {'x': '127.0861067', 'y': '37.5729649'}, {'x': '127.0860469', 'y': '37.5726380'}, {'x': '127.0860522', 'y': '37.5720175'}]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#specific data 추출\n",
@@ -150,31 +158,70 @@
    "source": [
     "### Read Geo Data with Python\n",
     "\n",
-    "1) 서울시의 경계에 맞게 각 coordinate를 구분하기 --> 경계선 따라서 좌표 따기"
+    "1) 서울시의 경계에 맞게 각 coordinate를 구분하기 --> 경계선 따라서 좌표 따기\n",
+    ": 경계선의 coordinate를 따면, Taxi들의 좌표값에 맞게 Spatial Analysis를 진행할 수 있음"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://hiseon.me/2018/07/07/shp-file-format/"
+    "#https://hiseon.me/2018/07/07/shp-file-format/\n",
+    "#https://junpyopark.github.io/road-network-construction-1/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import shapefile #pip install shapefile\n",
+    "#from pyproj import Proj, transform #pip install pyproj\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#pip install geojson\n",
+    "#pip install folium\n",
+    "\n",
+    "#https://snscrawler.wordpress.com/tag/folium/\n",
+    "\n",
+    "import folium\n",
+    "\n",
+    "#37.566345, 126.977893을 중심으로 한 Map생성 방법\n",
+    "map_osm = folium.Map(location=[37.566345, 126.977893], zoom_start=17) #zoom_start : 몇 번 확대할 것인지\n",
+    "map_osm.save('./map1.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "map_osm = folium.Map(location=[37.566345, 126.977893])\n",
+    "rfile = open('./seoul_municipal.json','r',encoding='utf-8').read()\n",
+    "jsonData = json.loads(rfile)\n",
+    "folium.GeoJson(jsonData, name='json_data').add_to(map_osm)\n",
+    "map_osm.save('./seoul.html') #2013 ver.\n",
+    "\n",
+    "#Result : municipal.html --> 지도 위에 행정구역 구분해놓은 정도 ==> 아직 Coordinate까지는 찾지 못함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Read Data in Time-Series Form"
+   ]
   },
   {
    "cell_type": "code",
@@ -221,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
